CTransifex changelog

~ updated language & country database
~ updated default language mappings
+ added footer
+ added breadcrumbs
+ added a router file
+ added a language view
# now stats are being calculated as in transifex